--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-01 14:33+0000\n"
-"PO-Revision-Date: 2018-03-08 16:56+0000\n"
-"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
+"PO-Revision-Date: 2018-03-09 15:05+0000\n"
+"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -22,21 +22,21 @@ msgstr ""
 #: pretix/control/templates/pretixcontrol/events/index.html:122
 #: pretix/control/views/dashboards.py:353
 msgid "Shop disabled"
-msgstr ""
+msgstr "Winkel uitgeschakeld"
 
 #: htmlcov/pretix_control_views_dashboards_py.html:900
 #: pretix/control/forms/filter.py:268 pretix/control/forms/filter.py:363
 #: pretix/control/templates/pretixcontrol/events/index.html:124
 #: pretix/control/templates/pretixcontrol/subevents/index.html:91
 msgid "Presale over"
-msgstr ""
+msgstr "Voorverkoop afgelopen"
 
 #: htmlcov/pretix_control_views_dashboards_py.html:902
 #: pretix/control/forms/filter.py:267 pretix/control/forms/filter.py:362
 #: pretix/control/templates/pretixcontrol/events/index.html:126
 #: pretix/control/templates/pretixcontrol/subevents/index.html:93
 msgid "Presale not started"
-msgstr ""
+msgstr "Voorverkoop nog niet begonnen"
 
 #: htmlcov/pretix_control_views_dashboards_py.html:904
 #: pretix/control/templates/pretixcontrol/events/index.html:128
@@ -1678,7 +1678,7 @@ msgstr "Verzendkosten"
 
 #: pretix/base/models/orders.py:676
 msgid "Service fee"
-msgstr ""
+msgstr "Servicekosten"
 
 #: pretix/base/models/orders.py:677
 msgid "Other fees"
@@ -1841,7 +1841,7 @@ msgstr "Teams"
 #: pretix/base/models/organizer.py:222
 #, python-brace-format
 msgid "Invite to team '{team}' for '{email}'"
-msgstr ""
+msgstr "Uitnodiging voor '{team}' voor '{email}'"
 
 #: pretix/base/models/tax.py:65
 msgid "Should be short, e.g. \"VAT\""
@@ -1925,7 +1925,7 @@ msgstr ""
 
 #: pretix/base/models/vouchers.py:101
 msgid "Number of times this voucher can be redeemed."
-msgstr ""
+msgstr "Aantal keren dat deze voucher kan worden ingewisseld."
 
 #: pretix/base/models/vouchers.py:105 pretix/control/views/vouchers.py:61
 msgid "Redeemed"
@@ -1937,7 +1937,7 @@ msgstr "Geldig tot"
 
 #: pretix/base/models/vouchers.py:114 pretix/control/forms/filter.py:621
 msgid "Reserve ticket from quota"
-msgstr ""
+msgstr "Reserveer ticket uit quotum"
 
 #: pretix/base/models/vouchers.py:116
 msgid ""
@@ -1967,6 +1967,8 @@ msgstr ""
 #: pretix/base/models/vouchers.py:142 pretix/control/forms/vouchers.py:17
 msgid "This product is added to the user's cart if the voucher is redeemed."
 msgstr ""
+"Dit product wordt aan de winkelwagen van de gebruiker toegevoegd als de "
+"voucher wordt ingewisseld."
 
 #: pretix/base/models/vouchers.py:150
 msgid "This variation of the product select above is being used."
@@ -1997,7 +1999,7 @@ msgstr ""
 #: pretix/control/templates/pretixcontrol/vouchers/detail.html:7
 #: pretix/control/templates/pretixcontrol/waitinglist/index.html:124
 msgid "Voucher"
-msgstr ""
+msgstr "Voucher"
 
 #: pretix/base/models/vouchers.py:177
 #: pretix/control/templates/pretixcontrol/event/base.html:112
@@ -2006,19 +2008,20 @@ msgstr ""
 #: pretix/control/templates/pretixcontrol/vouchers/index.html:5
 #: pretix/control/views/item.py:613
 msgid "Vouchers"
-msgstr ""
+msgstr "Vouchers"
 
 #: pretix/base/models/vouchers.py:202
 msgid "You cannot select a quota that belongs to a different event."
-msgstr ""
+msgstr "U kunt geen quotum selecteren dat bij een ander evenement hoort."
 
 #: pretix/base/models/vouchers.py:204
 msgid "You cannot select a quota and a specific product at the same time."
-msgstr ""
+msgstr "U kunt niet tegelijk een quotum en een specifiek product selecteren."
 
 #: pretix/base/models/vouchers.py:207
+#, fuzzy
 msgid "You cannot select an item that belongs to a different event."
-msgstr ""
+msgstr "U kunt geen item kiezen dat bij een ander evenement hoort."
 
 #: pretix/base/models/vouchers.py:209
 msgid ""
@@ -2042,34 +2045,47 @@ msgstr ""
 "Anders kan het onduidelijk zijn welk quota geblokkeerd moet worden."
 
 #: pretix/base/models/vouchers.py:217
+#, fuzzy
 msgid "It is currently not possible to create vouchers for add-on products."
 msgstr ""
+"Het is op dit moment niet mogelijk om vouchers voor add-on-producten te "
+"maken."
 
 #: pretix/base/models/vouchers.py:219 pretix/base/models/vouchers.py:308
 msgid "You need to specify either a quota or a product."
-msgstr ""
+msgstr "U moet een quotum of een product opgeven."
 
 #: pretix/base/models/vouchers.py:225
-#, python-format
+#, fuzzy, python-format
 msgid ""
 "This voucher has already been redeemed %(redeemed)s times. You cannot reduce "
 "the maximum number of usages below this number."
 msgstr ""
+"Deze voucher is al %(redeemed)s keren gebruikt. U kunt het maximale aantal "
+"keren te gebruiken niet lager maken dan dit getal."
 
 #: pretix/base/models/vouchers.py:235 pretix/base/models/vouchers.py:293
+#, fuzzy
 msgid ""
 "If you want this voucher to block quota, you need to select a specific date."
 msgstr ""
+"Als u wilt dat deze voucher quotum blokkeert moet u een specifieke datum "
+"selecteren."
 
 #: pretix/base/models/vouchers.py:237
 msgid "You can not select a subevent if your event is not an event series."
 msgstr ""
+"U kunt geen onderevenement selecteren als uw evenement geen evenementreeks "
+"is."
 
 #: pretix/base/models/vouchers.py:311
+#, fuzzy
 msgid ""
 "You cannot create a voucher that blocks quota as the selected product or "
 "quota is currently sold out or completely reserved."
 msgstr ""
+"U kunt geen voucher maken die quotum blokkeert omdat het gekozen product of "
+"quotum op dit moment uitverkocht of volledig gereserveerd is."
 
 #: pretix/base/models/vouchers.py:317
 msgid "A voucher with this code already exists."
@@ -2246,16 +2262,23 @@ msgid "Absolute value"
 msgstr "Absolute waarde"
 
 #: pretix/base/payment.py:184
+#, fuzzy
 msgid ""
 "Percentage of the order total. Note that this percentage will currently only "
 "be calculated on the summed price of sold tickets, not on other fees like e."
 "g. shipping fees, if there are any."
 msgstr ""
+"Percentage van het totaalbedrag van de bestelling. Merk op dat dit "
+"percentage alleen zal worden berekend over de prijzen van de verkochte "
+"kaartjes, en niet over andere toeslagen zoals verzendkosten, als deze er "
+"zijn."
 
 #: pretix/base/payment.py:193
 msgid ""
 "Users will not be able to choose this payment provider after the given date."
 msgstr ""
+"Gebruikers zullen na de opgegeven datum deze betalingsprovider niet kunnen "
+"kiezen."
 
 #: pretix/base/payment.py:198
 msgid "Calculate the fee from the total value including the fee."
@@ -10040,31 +10063,31 @@ msgstr ""
 
 #: pretix/plugins/stripe/payment.py:685
 msgid "SOFORT via Stripe"
-msgstr ""
+msgstr "SOFORT via Stripe"
 
 #: pretix/plugins/stripe/payment.py:702
 msgid "Country of your bank"
-msgstr ""
+msgstr "Land van uw bank"
 
 #: pretix/plugins/stripe/payment.py:703
 msgid "Germany"
-msgstr ""
+msgstr "Duitsland"
 
 #: pretix/plugins/stripe/payment.py:704
 msgid "Austria"
-msgstr ""
+msgstr "Oostenrijk"
 
 #: pretix/plugins/stripe/payment.py:705
 msgid "Belgium"
-msgstr ""
+msgstr "België"
 
 #: pretix/plugins/stripe/payment.py:706
 msgid "Netherlands"
-msgstr ""
+msgstr "Nederland"
 
 #: pretix/plugins/stripe/payment.py:707
 msgid "Spain"
-msgstr ""
+msgstr "Spanje"
 
 #: pretix/plugins/stripe/signals.py:48
 msgid "Charge succeeded."
@@ -10084,15 +10107,15 @@ msgstr ""
 
 #: pretix/plugins/stripe/signals.py:52
 msgid "Payment authorized."
-msgstr ""
+msgstr "Betaling goedgekeurd."
 
 #: pretix/plugins/stripe/signals.py:53
 msgid "Payment authorization canceled."
-msgstr ""
+msgstr "Betalingsgoedkeuring geannuleerd."
 
 #: pretix/plugins/stripe/signals.py:54
 msgid "Payment authorization failed."
-msgstr ""
+msgstr "Betalingsgoedkeuring mislukt."
 
 #: pretix/plugins/stripe/signals.py:60
 msgid "Charge failed. Reason: {}"
@@ -11489,6 +11512,8 @@ msgid ""
 "You cannot add yourself to the waiting list as this product is currently "
 "available."
 msgstr ""
+"U kunt uzelf niet op de wachtlijst zetten, omdat dit product momenteel "
+"beschikbaar is."
 
 #: pretix/presale/views/waiting.py:87
 msgid ""
