--- a/src/pretix/locale/nl/LC_MESSAGES/django.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-01 14:33+0000\n"
-"PO-Revision-Date: 2018-03-09 15:09+0000\n"
-"Last-Translator: Maarten Visscher <mail@maartenvisscher.nl>\n"
+"PO-Revision-Date: 2018-03-09 15:21+0000\n"
+"Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
 "Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix/nl/>"
 "\n"
 "Language: nl\n"
@@ -2848,7 +2848,7 @@ msgstr ""
 #: pretix/base/services/update_check.py:123
 #, python-format
 msgid "Plugin: %s"
-msgstr ""
+msgstr "Plug-in: %s"
 
 #: pretix/base/settings.py:238
 #, python-brace-format
@@ -5040,11 +5040,11 @@ msgstr ""
 
 #: pretix/control/logdisplay.py:179
 msgid "A plugin has been enabled."
-msgstr ""
+msgstr "Een plug-in is ingeschakeld."
 
 #: pretix/control/logdisplay.py:180
 msgid "A plugin has been disabled."
-msgstr ""
+msgstr "Een plug-in is uitgeschakeld."
 
 #: pretix/control/logdisplay.py:181
 msgid "The shop has been taken live."
@@ -5997,10 +5997,13 @@ msgid ""
 msgstr ""
 
 #: pretix/control/templates/pretixcontrol/event/payment.html:49
+#, fuzzy
 msgid ""
 "There are no payment providers available. Please go to the plugin settings "
 "and activate one or more payment plugins."
 msgstr ""
+"Er zijn geen betalingsproviders beschikbaar. Ga naar de plug-in-instellingen "
+"en activeer een of meerdere betalingsplug-ins."
 
 #: pretix/control/templates/pretixcontrol/event/permissions.html:10
 msgid ""
@@ -6070,14 +6073,16 @@ msgstr ""
 msgid ""
 "This plugin needs to be enabled by a system administrator for your event."
 msgstr ""
+"Deze plug-in moet door een systeembeheerder worden ingeschakeld voor uw "
+"evenement."
 
 #: pretix/control/templates/pretixcontrol/event/plugins.html:54
 msgid "This plugin cannot be enabled for the following reasons:"
-msgstr ""
+msgstr "Deze plug-in kan om de volgende redenen niet worden ingeschakeld:"
 
 #: pretix/control/templates/pretixcontrol/event/plugins.html:64
 msgid "This plugin reports the following problems:"
-msgstr ""
+msgstr "Deze plug-in meldt de volgende problemen:"
 
 #: pretix/control/templates/pretixcontrol/event/settings.html:21
 #: pretix/control/templates/pretixcontrol/subevents/detail.html:32
@@ -6235,16 +6240,23 @@ msgid "Ticket download"
 msgstr "Ticket download"
 
 #: pretix/control/templates/pretixcontrol/event/tickets.html:11
+#, fuzzy
 msgid ""
 "You activated ticket downloads but no output provider is enabled. Be sure to "
 "enable a plugin and activate an output provider."
 msgstr ""
+"U heeft ticketdownloads ingeschakeld maar geen uitvoerprovider is "
+"ingeschakeld. Zorg ervoor dat u een plug-in heeft ingeschakeld en de "
+"uitvoerprovider heeft geactiveerd."
 
 #: pretix/control/templates/pretixcontrol/event/tickets.html:42
+#, fuzzy
 msgid ""
 "There are no ticket outputs available. Please go to the plugin settings and "
 "activate one or more ticket output plugins."
 msgstr ""
+"Er zijn geen ticketuitvoeren beschikbaar. Ga naar de plug-in-instellingen en "
+"activeer een of meer ticketuitvoerplug-ins."
 
 #: pretix/control/templates/pretixcontrol/event/widget.html:10
 msgid ""
@@ -8956,6 +8968,7 @@ msgstr ""
 #: pretix/plugins/banktransfer/__init__.py:16
 msgid "This plugin allows you to receive payments via bank transfer "
 msgstr ""
+"Deze plugin staat u toe om betalingen te ontvangen via bankoverschrijvingen "
 
 #: pretix/plugins/banktransfer/__init__.py:29
 msgid ""
@@ -9301,8 +9314,10 @@ msgid "Check-in list exporter"
 msgstr ""
 
 #: pretix/plugins/checkinlists/__init__.py:17
+#, fuzzy
 msgid "This plugin allows you to generate check-in lists for your conference."
 msgstr ""
+"Deze plugin staat u toe om inchecklijsten te genereren voor uw conferentie."
 
 #: pretix/plugins/checkinlists/exporters.py:38
 msgid "Include QR-code secret"
@@ -9343,7 +9358,7 @@ msgstr ""
 
 #: pretix/plugins/paypal/__init__.py:16
 msgid "This plugin allows you to receive payments via PayPal"
-msgstr ""
+msgstr "Deze plugin staat u toe om betalingen te ontvangen via PayPal"
 
 #: pretix/plugins/paypal/payment.py:27 pretix/plugins/stripe/payment.py:28
 msgid "Refund automatically?"
@@ -9560,6 +9575,8 @@ msgid ""
 "This plugin allows you to use the pretixdroid and pretixdesk apps for your "
 "event."
 msgstr ""
+"Deze plugin staat u toe om de pretixdroid- en pretixdesk-apps voor uw "
+"evenement te gebruiken."
 
 #: pretix/plugins/pretixdroid/models.py:11
 msgid "Can scan all products"
@@ -9757,6 +9774,8 @@ msgstr ""
 #: pretix/plugins/reports/__init__.py:16
 msgid "This plugin allows you to generate printable reports about your sales."
 msgstr ""
+"Deze plugin staat u toe om printbare rapporten te genereren over uw "
+"verkoopcijfers."
 
 #: pretix/plugins/reports/exporters.py:100
 #, python-format
@@ -9818,7 +9837,7 @@ msgstr ""
 
 #: pretix/plugins/sendmail/__init__.py:15
 msgid "This plugin allows you to send out emails to all your customers."
-msgstr ""
+msgstr "Deze plugin staat u toe om emails naar al uw klanten te versturen."
 
 #: pretix/plugins/sendmail/forms.py:17
 msgid "Only send to people who bought"
@@ -9910,6 +9929,7 @@ msgstr "Stripe"
 #: pretix/plugins/stripe/__init__.py:16
 msgid "This plugin allows you to receive credit card payments via Stripe"
 msgstr ""
+"Deze plug-in staat u toe om creditcardbetalingen te ontvangen via Stripe"
 
 #: pretix/plugins/stripe/payment.py:30
 msgid "Automatically refund charge with Stripe"
@@ -9957,11 +9977,11 @@ msgstr ""
 
 #: pretix/plugins/stripe/payment.py:102
 msgid "Only relevant for credit card payments."
-msgstr ""
+msgstr "Alleen van belang voor creditcardbetalingen."
 
 #: pretix/plugins/stripe/payment.py:106
 msgid "Credit card payments"
-msgstr ""
+msgstr "Creditcardbetalingen"
 
 #: pretix/plugins/stripe/payment.py:111 pretix/plugins/stripe/payment.py:464
 msgid "giropay"
@@ -10025,11 +10045,11 @@ msgstr ""
 
 #: pretix/plugins/stripe/payment.py:379
 msgid "Credit card via Stripe"
-msgstr ""
+msgstr "Creditcard via Stripe"
 
 #: pretix/plugins/stripe/payment.py:380
 msgid "Credit card"
-msgstr ""
+msgstr "Creditcard"
 
 #: pretix/plugins/stripe/payment.py:405
 msgid "You may need to enable JavaScript for Stripe payments."
@@ -10169,7 +10189,7 @@ msgstr ""
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_confirm.html:4
 msgid "The total amount will be withdrawn from your credit card."
-msgstr ""
+msgstr "Het totaalbedrag zal worden afgeschreven van uw creditcard."
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_confirm.html:8
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html:19
@@ -10203,7 +10223,7 @@ msgstr ""
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html:9
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form_stripe_checkout.html:6
 msgid "For a credit card payment, please turn on JavaScript."
-msgstr ""
+msgstr "Zet JavaScript aan om een creditcardbetaling uit te voeren."
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html:15
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form_stripe_checkout.html:10
@@ -10223,10 +10243,13 @@ msgid ""
 "Your payment will be processed by Stripe, Inc. Your credit card data will be "
 "transmitted directly to Stripe and never touches our servers."
 msgstr ""
+"Uw betaling zal worden verwerkt door Stripe, Inc. Uw creditcardgegevens "
+"zullen direct naar Stripe worden verzonden, en nooit op onze servers komen."
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form_stripe_checkout.html:28
+#, fuzzy
 msgid "Please continue below to start the credit card payment."
-msgstr ""
+msgstr "Ga hieronder verder om een creditcardbetaling te starten."
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/control.html:5
 #, python-format
