--- a/src/pretix/locale/da/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/da/LC_MESSAGES/djangojs.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-12-05 15:54+0100\n"
+"POT-Creation-Date: 2018-03-16 11:32+0000\n"
 "PO-Revision-Date: 2018-03-10 13:20+0000\n"
 "Last-Translator: Ture Gjørup <ture@ignatz.dk>\n"
-"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-"
-"js/da/>\n"
+"Language-Team: Danish <https://translate.pretix.eu/projects/pretix/pretix-js/"
+"da/>\n"
 "Language: da\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -294,8 +294,8 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
-"billetsystem drevet af <a href=\"https://pretix.eu\" target=\"_blank\" rel=\""
-"noopener\">pretix</a>"
+"billetsystem drevet af <a href=\"https://pretix.eu\" target=\"_blank\" rel="
+"\"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
