--- a/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/nl/LC_MESSAGES/djangojs.po
@@ -6,11 +6,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-01 14:33+0000\n"
+"POT-Creation-Date: 2018-03-16 11:32+0000\n"
 "PO-Revision-Date: 2018-03-10 13:20+0000\n"
 "Last-Translator: Maarten van den Berg <maartenberg1@gmail.com>\n"
-"Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-"
-"js/nl/>\n"
+"Language-Team: Dutch <https://translate.pretix.eu/projects/pretix/pretix-js/"
+"nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -202,8 +202,10 @@ msgstr "Winkelwagen is verlopen"
 #: pretix/static/pretixpresale/js/ui/cart.js:46
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
-msgstr[0] "De items in uw winkelwagen zijn voor u gereserveerd voor één minuut."
-msgstr[1] "De items in uw winkelwagen zijn voor u gereserveerd voor {num} minuten."
+msgstr[0] ""
+"De items in uw winkelwagen zijn voor u gereserveerd voor één minuut."
+msgstr[1] ""
+"De items in uw winkelwagen zijn voor u gereserveerd voor {num} minuten."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:9
 msgctxt "widget"
@@ -295,8 +297,8 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
-"ticketsysteem mogelijk gemaakt door <a href=\"https://pretix.eu\" target=\""
-"_blank\" rel=\"noopener\">pretix</a>"
+"ticketsysteem mogelijk gemaakt door <a href=\"https://pretix.eu\" target="
+"\"_blank\" rel=\"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
