--- a/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/pt_BR/LC_MESSAGES/djangojs.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-06 17:25+0000\n"
+"POT-Creation-Date: 2018-03-16 11:32+0000\n"
 "PO-Revision-Date: 2018-03-10 13:20+0000\n"
 "Last-Translator: Matheus Nunes <matheus@integrate.com.br>\n"
-"Language-Team: Portuguese (Brazil) "
-"<https://translate.pretix.eu/projects/pretix/pretix-js/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://translate.pretix.eu/projects/"
+"pretix/pretix-js/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -206,7 +206,8 @@ msgstr "O carrinho expirou"
 msgid "The items in your cart are reserved for you for one minute."
 msgid_plural "The items in your cart are reserved for you for {num} minutes."
 msgstr[0] "Os items em seu carrinho estão reservados para você por 1 minuto."
-msgstr[1] "Os items em seu carrinho estão reservados para você por {num} minutos."
+msgstr[1] ""
+"Os items em seu carrinho estão reservados para você por {num} minutos."
 
 #: pretix/static/pretixpresale/js/widget/widget.js:9
 msgctxt "widget"
@@ -297,8 +298,8 @@ msgid ""
 "ticketing powered by <a href=\"https://pretix.eu\" target=\"_blank\" rel="
 "\"noopener\">pretix</a>"
 msgstr ""
-"Desenvolvido por <a href=\"https://pretix.eu\" target=\"_blank\" rel=\""
-"noopener\">pretix</a>"
+"Desenvolvido por <a href=\"https://pretix.eu\" target=\"_blank\" rel="
+"\"noopener\">pretix</a>"
 
 #: pretix/static/pretixpresale/js/widget/widget.js:27
 msgctxt "widget"
