--- a/src/pretix/locale/ar/LC_MESSAGES/django.po
+++ b/src/pretix/locale/ar/LC_MESSAGES/django.po
@@ -7,16 +7,18 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-26 11:13+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2018-03-16 11:32+0000\n"
+"PO-Revision-Date: 2018-03-17 21:10+0000\n"
+"Last-Translator: OMar <omelgazzar@gmail.com>\n"
+"Language-Team: Arabic "
+"<https://translate.pretix.eu/projects/pretix/pretix/ar/>\n"
 "Language: ar\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
+"X-Generator: Weblate 2.19.1\n"
 
 #: htmlcov/pretix_control_views_dashboards_py.html:898
 #: pretix/control/templates/pretixcontrol/events/index.html:122
@@ -43,7 +45,7 @@ msgstr ""
 #: pretix/control/templates/pretixcontrol/subevents/index.html:95
 #: pretix/control/views/dashboards.py:359
 msgid "On sale"
-msgstr ""
+msgstr "للبيع"
 
 #: pretix/api/serializers/checkin.py:27 pretix/base/models/items.py:810
 #: pretix/base/models/items.py:1117
