--- a/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
+++ b/src/pretix/locale/de_Informal/LC_MESSAGES/django.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-04-12 10:41+0000\n"
+"POT-Creation-Date: 2018-04-13 07:55+0000\n"
 "PO-Revision-Date: 2018-04-12 10:50+0000\n"
 "Last-Translator: Raphael Michel <michel@rami.io>\n"
-"Language-Team: German (informal) "
-"<https://translate.pretix.eu/projects/pretix/pretix/de_Informal/>\n"
+"Language-Team: German (informal) <https://translate.pretix.eu/projects/"
+"pretix/pretix/de_Informal/>\n"
 "Language: de_Informal\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1695,7 +1695,7 @@ msgstr "Das Produkt \"{item}\" ist nicht mehr verfügbar."
 #: pretix/plugins/checkinlists/exporters.py:319
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html:82
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html:83
-#: pretix/presale/checkoutflow.py:537
+#: pretix/presale/checkoutflow.py:539
 msgid "Yes"
 msgstr "Ja"
 
@@ -1707,7 +1707,7 @@ msgstr "Ja"
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html:82
 #: pretix/plugins/pretixdroid/templates/pretixplugins/pretixdroid/configuration.html:83
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/action_refund.html:14
-#: pretix/presale/checkoutflow.py:539
+#: pretix/presale/checkoutflow.py:541
 msgid "No"
 msgstr "Nein"
 
@@ -2533,21 +2533,31 @@ msgstr "20:00"
 msgid "Event end date and time"
 msgstr "Veranstaltungsende und Uhrzeit"
 
-#: pretix/base/pdf.py:89 pretix/base/pdf.py:105
-msgid "2017-05-31 19:00"
-msgstr "31.05.2016 19:00"
+#: pretix/base/pdf.py:89
+#, fuzzy
+#| msgid "2017-05-31 20:00"
+msgid "2017-05-31 22:00"
+msgstr "31.05.2016 20:00"
 
-#: pretix/base/pdf.py:97 pretix/base/pdf.py:113
-msgid "19:00"
-msgstr "19:00"
+#: pretix/base/pdf.py:97
+msgid "22:00"
+msgstr ""
 
 #: pretix/base/pdf.py:104
 msgid "Event admission date and time"
 msgstr "Einlassdatum und Uhrzeit"
 
+#: pretix/base/pdf.py:105
+msgid "2017-05-31 19:00"
+msgstr "31.05.2016 19:00"
+
 #: pretix/base/pdf.py:112
 msgid "Event admission time"
 msgstr "Veranstaltungs-Berechtigung"
+
+#: pretix/base/pdf.py:113
+msgid "19:00"
+msgstr "19:00"
 
 #: pretix/base/pdf.py:120
 msgid "Event location"
@@ -3679,7 +3689,7 @@ msgstr ""
 msgid "Filetype not allowed!"
 msgstr "Dateityp nicht erlaubt!"
 
-#: pretix/control/forms/event.py:33 pretix/control/forms/organizer.py:160
+#: pretix/control/forms/event.py:33 pretix/control/forms/organizer.py:164
 msgid "Use languages"
 msgstr "Verfügbare Sprachen"
 
@@ -4555,12 +4565,12 @@ msgstr ""
 "Veranstaltung nicht mehr oben auf der Seite an. Wir zeigen das Logo mit "
 "einer Höhe von maximal 120 Pixeln an."
 
-#: pretix/control/forms/event.py:843 pretix/control/forms/organizer.py:165
+#: pretix/control/forms/event.py:843 pretix/control/forms/organizer.py:169
 #: pretix/control/templates/pretixcontrol/pdf/index.html:275
 msgid "Font"
 msgstr "Schriftart"
 
-#: pretix/control/forms/event.py:847 pretix/control/forms/organizer.py:169
+#: pretix/control/forms/event.py:847 pretix/control/forms/organizer.py:173
 msgid "Only respected by modern browsers."
 msgstr "Nur von modernen Browser respektiert."
 
@@ -5277,7 +5287,11 @@ msgstr "Liste"
 msgid "Calendar"
 msgstr "Kalender"
 
-#: pretix/control/forms/organizer.py:162
+#: pretix/control/forms/organizer.py:159
+msgid "Link back to organizer overview on all event pages"
+msgstr ""
+
+#: pretix/control/forms/organizer.py:166
 msgid ""
 "Choose all languages that your organizer homepage should be available in."
 msgstr ""
@@ -6168,7 +6182,7 @@ msgstr "Neues Passwort setzen"
 #: pretix/control/templates/pretixcontrol/order/change_questions.html:73
 #: pretix/control/templates/pretixcontrol/order/extend.html:28
 #: pretix/control/templates/pretixcontrol/organizers/create.html:17
-#: pretix/control/templates/pretixcontrol/organizers/display.html:28
+#: pretix/control/templates/pretixcontrol/organizers/display.html:29
 #: pretix/control/templates/pretixcontrol/organizers/edit.html:85
 #: pretix/control/templates/pretixcontrol/organizers/team_edit.html:42
 #: pretix/control/templates/pretixcontrol/pdf/index.html:337
@@ -6774,7 +6788,7 @@ msgid "Event page"
 msgstr "Veranstaltungsseite"
 
 #: pretix/control/templates/pretixcontrol/event/display.html:16
-#: pretix/control/templates/pretixcontrol/organizers/display.html:16
+#: pretix/control/templates/pretixcontrol/organizers/display.html:17
 msgid "Shop design"
 msgstr "Shop-Design"
 
@@ -8586,7 +8600,7 @@ msgstr "Veranstalter: %(name)s"
 msgid "Organizer page"
 msgstr "Veranstalterseite"
 
-#: pretix/control/templates/pretixcontrol/organizers/display.html:18
+#: pretix/control/templates/pretixcontrol/organizers/display.html:19
 msgid ""
 "These settings will be used for the organizer page as well as for the "
 "default settings for all events in this account that do not have their own "
@@ -11202,6 +11216,23 @@ msgstr "Zahlung storniert."
 msgid "PayPal reported an event: {}"
 msgstr "PayPal meldete ein Ereignis: {}"
 
+#: pretix/plugins/paypal/templates/pretixplugins/paypal/action_double.html:5
+#, fuzzy, python-format
+#| msgid ""
+#| "The PayPal transaction %(payment)s has succeeded, but the order %(order)s "
+#| "is expired and the product was sold out in the meantime. Therefore, the "
+#| "payment could not be accepted. Please contact the user and refund the "
+#| "money via PayPal's interface."
+msgid ""
+"The PayPal transaction %(payment)s has succeeded, but the order %(order)s "
+"has already been paid by other means. Please double check and refund the "
+"money via PayPal's interface."
+msgstr ""
+"Die PayPal-Transaktion %(payment)s war erfolgreich, aber die Bestellung "
+"%(order)s war abgelaufen und das Produkt wurde während der Transaktion "
+"ausverkauft. Die Zahlung konnte daher nicht akzeptiert werden. Bitte "
+"kontaktiere den Kunden und überweise das Geld über PayPals Oberfläche zurück."
+
 #: pretix/plugins/paypal/templates/pretixplugins/paypal/action_overpaid.html:5
 #, python-format
 msgid ""
@@ -11333,13 +11364,13 @@ msgstr "Paypal hat uns eine ungültige Antwort geschickt."
 msgid "It looks like you canceled the PayPal payment"
 msgstr "Die PayPal-Zahlung wurde abgebrochen"
 
-#: pretix/plugins/paypal/views.py:192 pretix/plugins/stripe/views.py:291
+#: pretix/plugins/paypal/views.py:200 pretix/plugins/stripe/views.py:300
 msgid "The order cannot be marked as refunded as it is not marked as paid!"
 msgstr ""
 "Die Bestellung kann nicht als erstattet markiert werden, da sie nicht als "
 "bezahlt markiert ist."
 
-#: pretix/plugins/paypal/views.py:196 pretix/plugins/stripe/views.py:295
+#: pretix/plugins/paypal/views.py:204 pretix/plugins/stripe/views.py:304
 msgid ""
 "The order has been marked as refunded and the issue has been marked as "
 "resolved!"
@@ -12045,25 +12076,43 @@ msgstr "Anfechtungsverfahren beendet. Grund. {}"
 msgid "Stripe reported an event: {}"
 msgstr "Stripe meldete ein Ereignis: {}"
 
-#: pretix/plugins/stripe/signals.py:100
+#: pretix/plugins/stripe/signals.py:102
 msgid "Stripe Connect: Client ID"
 msgstr "Stripe Connect: Client-ID"
 
-#: pretix/plugins/stripe/signals.py:107
+#: pretix/plugins/stripe/signals.py:109
 msgid "Stripe Connect: Secret key"
 msgstr "Stripe Connect: Geheimer Schlüssel"
 
-#: pretix/plugins/stripe/signals.py:114
+#: pretix/plugins/stripe/signals.py:116
 msgid "Stripe Connect: Publishable key"
 msgstr "Stripe Connect: Veröffentlichbarer Schlüssel"
 
-#: pretix/plugins/stripe/signals.py:121
+#: pretix/plugins/stripe/signals.py:123
 msgid "Stripe Connect: Secret key (test)"
 msgstr "Stripe Connect: Geheimer Schlüssel (Testmodus)"
 
-#: pretix/plugins/stripe/signals.py:128
+#: pretix/plugins/stripe/signals.py:130
 msgid "Stripe Connect: Publishable key (test)"
 msgstr "Stripe Connect: Öffentlicher Schlüssel (Testmodus)"
+
+#: pretix/plugins/stripe/templates/pretixplugins/stripe/action_double.html:5
+#, fuzzy, python-format
+#| msgid ""
+#| "The Stripe transaction <a %(stripe_href)s>%(charge)s</a> has succeeded, "
+#| "but the order %(order)s is expired and the product was sold out in the "
+#| "meantime. Therefore, the payment could not be accepted. Please contact "
+#| "the user and refund the money via Stripe's interface."
+msgid ""
+"The Stripe transaction <a %(stripe_href)s>%(charge)s</a> has succeeded, but "
+"the order %(order)s has already been paid by other means. Please double-"
+"check and refund the money via Stripe's interface."
+msgstr ""
+"Die Stripe-Zahlung <a %(stripe_href)s>%(charge)s</a> war erfolgreich, aber "
+"die Bestellung %(order)s war abgelaufen und das Produkt wurde während der "
+"Transaktion ausverkauft. Die Zahlung konnte daher nicht akzeptiert werden. "
+"Bitte kontaktiere den Kunden und überweise das Geld über Stripes Oberfläche "
+"zurück."
 
 #: pretix/plugins/stripe/templates/pretixplugins/stripe/action_overpaid.html:5
 #, python-format
@@ -12247,11 +12296,11 @@ msgstr ""
 "Ihr Stripe-Konto ist nun mit pretix verbunden. Auf dieser Seite können Sie "
 "die Einstellungen im Detail anpassen."
 
-#: pretix/plugins/stripe/views.py:270
+#: pretix/plugins/stripe/views.py:279
 msgid "Your Stripe account has been disconnected."
 msgstr "Das Stripe-Konto wurde getrennt."
 
-#: pretix/plugins/stripe/views.py:331 pretix/plugins/stripe/views.py:358
+#: pretix/plugins/stripe/views.py:340 pretix/plugins/stripe/views.py:367
 msgid ""
 "Sorry, there was an error in the payment process. Please check the link in "
 "your emails to continue."
@@ -12259,7 +12308,7 @@ msgstr ""
 "Sorry, es gab einen Fehler im Bezahlvorgang. Bitte klicke den Link in der E-"
 "Mail, die wir dir geschickt haben, um fortzufahren."
 
-#: pretix/plugins/stripe/views.py:352
+#: pretix/plugins/stripe/views.py:361
 msgid ""
 "We had trouble authorizing your card payment. Please try again and get in "
 "touch with us if this problem persists."
@@ -12375,11 +12424,11 @@ msgctxt "checkoutflow"
 msgid "Review order"
 msgstr "Bestellung prüfen"
 
-#: pretix/presale/checkoutflow.py:568
+#: pretix/presale/checkoutflow.py:570
 msgid "You need to check all checkboxes on the bottom of the page."
 msgstr "Du musst alle Kontrollkästchen auf dieser Seite auswählen."
 
-#: pretix/presale/checkoutflow.py:598
+#: pretix/presale/checkoutflow.py:600
 msgid ""
 "There was an error sending the confirmation mail. Please try again later."
 msgstr ""
@@ -12470,11 +12519,17 @@ msgstr "Dieser Shop ist aktuell nur für dich und dein Team sichtbar."
 msgid "Take it live now"
 msgstr "Jetzt veröffentlichen"
 
-#: pretix/presale/templates/pretixpresale/event/base.html:66
+#: pretix/presale/templates/pretixpresale/event/base.html:29
+#, fuzzy, python-format
+#| msgid "Sample event name"
+msgid "Show all events of %(name)s"
+msgstr "Beispielevent"
+
+#: pretix/presale/templates/pretixpresale/event/base.html:75
 msgid "Contact event organizer"
 msgstr "Veranstalter kontaktieren"
 
-#: pretix/presale/templates/pretixpresale/event/base.html:69
+#: pretix/presale/templates/pretixpresale/event/base.html:78
 msgid "Imprint"
 msgstr "Impressum"
 
